6. The project block can be queried at present.

【installation method】

1. Unzip the module and upload the jill_query directory to modules
2. Enter the background to install the module.

【History Update】
jill_query version 2.43 released on 2021-08-19
 =================================================
1. Conformance level AA
1. Fix the label display error
jill_query version 2.42 released on October 22, 2020
 =================================================
1. Fix the label display error
jill_query version 2.41 released on 2020-10-05
 =================================================
1. Homepage query by authority
jill_query 2.40 version 2020-09-30 released
 =================================================
1. New label classification
jill_query 2.32 version 2020-08-26 released
 =================================================
1. Solve the problem that the qcsn field is set incorrectly and is not in the first row
jill_query 2.31 version 2020-08-17 released
 =================================================
1. Solve the problem of too small qcsn field
jill_query version 2.3 released on 2020-04-20
 =================================================
1. Increase the readable group
2. Click to edit the field name in the background
jill_query 2.2.1 version 2020-03-13 released
 =================================================
1. Accessibility 2.0
jill_query 2.20 version 2019-05-13 released
 =================================================
 1. Fix that data cannot be captured when exporting excel in the background
 2. Fix the new version of PHPEXCEL cannot export EXCEL
 3. Fully support XoopsModules\Tadtools\Utility
jill_query 2.10 version 2019-01-17 released
 =================================================
 1. Support Bootstrap 4.0
jill_query version 2.02 2018-09-13 released
 =================================================
 1. Directly add hyperlink label after excel import URL
jill_query version 2.01 2017-10-24 released