@@ -40,6 +40,12 @@ function search($qsn = '')
         redirect_header("index.php", 3, _MD_JILLQUERY_EMPTYQSN);
     }
 
+    if (empty($query_arr['isEnable'])) {
+        redirect_header("index.php", 3, _MD_JILLQUERY_CLOSED);
+        exit;
+
+    }
+
     // 是否有權限
     if (!group_perm($query_arr['read_group'])) {
         redirect_header("index.php", 3, _MD_JILLQUERY_ILLEGAL);
@@ -169,7 +175,7 @@ function show_result($qsn = "")
     // die("ads" . var_dump($_POST['fillValue']));
     $query_arr = get_jill_query($qsn);
 
-    if (empty($query_arr['ispublic'])) {
+    if (empty($query_arr['isEnable'])) {
         redirect_header($_SERVER["HTTP_REFERER"], 3, _MD_JILLQUERY_CLOSED);
         exit;
 
