@@ -17,6 +17,9 @@
 2.進入後台進行模組安裝即可。
 
 【歷史更新】
+jill_query 2.44 版 2022-01-11 釋出
+ =================================================
+1.修正已關閉的查詢仍能查詢
 jill_query 2.43 版 2021-08-19 釋出
  =================================================
 1.無障礙AA
