@@ -19,8 +19,11 @@ This module provides managers to import EXCEL files, and general users can query
 【History Update】
 jill_query version 2.43 released on 2021-08-19
  =================================================
+1. Fix the closed event
+jill_query version 2.43 released on 2021-08-19
+ =================================================
 1. Conformance level AA
-1. Fix the label display error
+2. Fix the label display error
 jill_query version 2.42 released on October 22, 2020
  =================================================
 1. Fix the label display error
